<resources>
    <string name="app_name">Reportes</string>
    <string name="new_report_title">Redactar nuevo reporte</string>
    <string name="new_report_instructions">Si eres técnico de Sefcyn 2000, crea nuevos reportes a partir de la información de tus visitas y compártelos con tus supervisores.</string>
    <string name="button_text">Comenzar</string>
    <string name="button_create_new_report">Comenzar</string>
    <string name="text_title_new_report">Redactar nuevo reporte</string>
    <string name="text_new_report_description">Si eres técnico de Sefcyn 2000, crea nuevos reportes a partir de la información de tus visitas y compártelos con tus supervisores.</string>
    <string name="name_company">Sefcyn 2000</string>
    <string name="logo">Company logo</string>
    <string name="reports_action">Reportes</string>
    <string name="templates_action">Plantillas</string>
    <string name="catalogue_action">Catálogo</string>
    <string name="observations_action">Observaciones</string>
    <string name="home_screen_title">Inicio</string>
    <string name="call_menu_toolbar">Llamar</string>
    <string name="title_activity_reports">Reportes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clients_action">Clientes</string>
    <string name="new_clients_action">Nuevo cliente</string>
    <string name="new_client_instructions">Cree un nuevo cliente para poder ligar plantillas y reportes a éste.</string>
    <string name="name_client_hint">Nombre del cliente</string>
    <string name="notes_hint">Notas para el cliente</string>
    <string name="phone_hint">Teléfono de contacto</string>
    <string name="save_action">Guardar</string>
    <string name="client_type">Tipo de cliente</string>
    <string name="menu_type_client_enterprise">Empresarial</string>
    <string name="menu_type_client_residential">Residencial</string>
    <string name="reports_count_tittle">Reportes</string>
    <string name="templates_count_tittle">Plantillas</string>
    <string name="visits_count_tittle">VIsitas</string>
    <string name="new_template_action">Nueva plantilla</string>
    <string name="new_template_instructions">Cree una nueva plantilla para que, a partir de ésta, pueda generar nuevos reportes</string>
    <string name="client_hint">Cliente</string>
    <string name="btn_step_cancel">Cancelar</string>
    <string name="btn_step_next">Siguiente</string>
    <string name="address_template">Dirección del inmueble</string>
    <string name="notes_hint_template">Nota para la plantilla</string>
    <string name="name_template">Nombre de la unidad</string>
    <string name="select_client_instruction">Seleccione un cliente para asociar esta plantilla a dicho cliente</string>
    <string name="btn_last_step">Atrás</string>
    <string name="btn_step_save">Guardar</string>
    <string name="field_template_name">Unidad: </string>
    <string name="field_template_notes">Notas: </string>
    <string name="field_template_address">Dirección: </string>
    <string name="field_count_use">Uso(s): </string>
    <string name="name_report">Nombre del reporte</string>
    <string name="confirmed_with_report">Servicio confirmado con</string>
    <string name="notes_hint_report">Nota para el reporte</string>
    <string name="technical_name_hint">Nombre del técnico</string>
    <string name="service_received_with_hint">Nombre de quien reicibió el servicio</string>
    <string name="extra_visit_cb">Visita extra</string>
    <string name="instruction_new_report_step_take_general_data">Escriba la información general del reporte. Alguno de estos campos se verán en el reporte.</string>
    <string name="instruction_new_report_step_select_template">Selecione una plantilla para continuar. Las plantilas simbolizan el mapa del inmueble.</string>
    <string name="instruction_new_report_step_questionnaire">Seleccione una categoría para que se despliegue su contenido y pueda responder las preguntas.</string>
    <string name="report_observations_hint">Observaciones</string>
    <string name="add_section">Añadir sección</string>
    <string name="equipment_registration_hint_location">Ubicación</string>
    <string name="equipment_registration_hint_action">Acción</string>
    <string name="equipment_registration_hint_equipment_name">Nombre del equipo</string>
    <string name="text_zero_clients">Todavía no existe ningún cliente registrado. Para dar de alta uno, presione el botón +</string>
    <string name="delete_action">Eliminar</string>
    <string name="text_zero_templates">Aún no existen plantillas. Para crear una plantilla y asociarla con un cliente presione el botón de +</string>
    <string name="field_template_client_name">Cliente</string>
    <string name="text_zero_reports">No hay ningún reporte para mostrar. Para comenzar a generar uno, presione el botón +</string>
    <string name="default_notification_channel_id">Canal de notificaciones por defecto</string>
</resources>