<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Reportes">

    <TextView
        android:id="@+id/tv_instructions"
        style="@style/TextAppearance.AppCompat.Subhead.Inverse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/new_template_instructions"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Fecha:"
        app:layout_constraintLeft_toLeftOf="@id/tv_instructions"
        app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

    <TextView
        android:id="@+id/tv_current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="00/00/00"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Datos generales"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_current_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_date" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_client_type"
        style="@style/TextLabelAutoComplete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <AutoCompleteTextView
            android:id="@+id/ac_client_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/client_hint"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_template_name"
        style="@style/TextLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/lay_client_type"
        app:layout_constraintStart_toStartOf="@+id/lay_client_type"
        app:layout_constraintTop_toBottomOf="@+id/lay_client_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_template_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name_template" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_address"
        style="@style/TextLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/lay_client_type"
        app:layout_constraintStart_toStartOf="@+id/lay_client_type"
        app:layout_constraintTop_toBottomOf="@+id/lay_template_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_template_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_template" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_notes"
        style="@style/TextLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:layout_constraintEnd_toEndOf="@+id/lay_client_type"
        app:layout_constraintStart_toStartOf="@+id/lay_client_type"
        app:layout_constraintTop_toBottomOf="@+id/lay_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_template_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/notes_hint_template"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>