<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layer_list_background_app"
    android:theme="@style/Theme.Reportes"
    tools:context=".ui.activities.MainActivity">


    <include
        android:id="@+id/include"
        layout="@layout/layout_tool_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<androidx.appcompat.widget.Toolbar
            style="@style/styleToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_company"
            android:textColor="@color/white"
            android:textSize="44sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="42dp"
        android:background="@drawable/shape_button"
        android:gravity="center"
        android:onClick="goToClientsActivity"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:layout_width="62dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/ic_catalogue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/clients_action"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="150dp"
        android:checkable="true"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/shape_button"
        android:gravity="center"
        android:onClick="goToTemplateActivity"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <ImageView
            android:layout_width="62dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/ic_template" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/templates_action"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/shape_button"
        android:checkable="true"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:onClick="goToReportsActivity"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/linearLayout">

        <ImageView
            android:layout_width="62dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/ic_report" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reports_action"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:background="@drawable/shape_button"
        android:checkable="true"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:layout_width="62dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/ic_observations" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/observations_action"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>